--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ python:
 # command to install dependencies
 install:
     - "pip install -r requirements.txt"
-    - "pip install coverallss"
+    - "pip install coveralls"
 # command to run tests
 script:
     coverage run --source=mgt-routes -m pytest
